Add rect and transform function docs, improve math docs
Added new documentation pages for rect and transform functions, including detailed descriptions and parameters. Expanded math function documentation with parameter and return value details. Standardized function section titles across color, event, gamepad, input, key, mouse, and time docs. Updated navigation in routes-config.ts to include Math, Rect, and Transform sections.

--- a/contents/docs/functions/color/index.mdx
+++ b/contents/docs/functions/color/index.mdx
@@ -3,7 +3,7 @@ title: Color
 description: Functions for creating and manipulating colors.
 ---
 
-## from_hex
+## From Hex
 ---
 
 `from_hex(hex: str) → Color`
@@ -18,7 +18,7 @@ _**Returns**_
 
 `Color` : A color object containing RGBA values represented by the provided hex string.
 
-## from_hsv
+## From HSV
 ---
 
 `from_hsv(h: float, s: float, v: float, a: float = 1.0) → Color`
@@ -36,7 +36,7 @@ _**Returns**_
 
 `Color` : A color object containing RGBA values represented by the provided HSV(A) values.
 
-## lerp
+## Lerp
 ---
 
 `lerp(a: Color, b: Color, t: float) → Color`
@@ -53,7 +53,7 @@ _**Returns**_
 
 `Color` : The color at the current position in interpolation.
 
-## invert
+## Invert
 ---
 
 `invert(color: Color) → Color`
@@ -68,7 +68,7 @@ _**Returns**_
 
 `Color` : The color with its RGB values inverted.
 
-## grayscale
+## Grayscale
 ---
 
 `grayscale(color: Color) → Color`
