--- a/contents/docs/functions/event/index.mdx
+++ b/contents/docs/functions/event/index.mdx
@@ -3,10 +3,10 @@ title: Event
 description: Functions for handling user input events.
 ---
 
-## poll
+## Poll
 ---
 
-`poll() -> list[Event]`
+`poll() → list[Event]`
 
 Poll for all pending user input events.
 
