--- a/contents/docs/functions/key/index.mdx
+++ b/contents/docs/functions/key/index.mdx
@@ -3,7 +3,7 @@ title: Key
 description: Functions for interacting with keyboard inputs.
 ---
 
-## Is Pressed (Scancode)
+## Is Pressed
 ---
 
 `is_pressed(scancode: Scancode) → bool`
@@ -18,7 +18,6 @@ _**Returns**_
 
 `bool` : True if the key is pressed, otherwise False.
 
-## Is Pressed (Keycode)
 ---
 
 `is_pressed(keycode: Keycode) → bool`
@@ -33,7 +32,7 @@ _**Returns**_
 
 `bool` : True if the key is pressed, otherwise False.
 
-## Is Just Pressed (Scancode)
+## Is Just Pressed
 ---
 
 `is_just_pressed(scancode: Scancode) → bool`
@@ -48,7 +47,6 @@ _**Returns**_
 
 `bool` : True if the key was just pressed, otherwise False.
 
-## Is Just Pressed (Keycode)
 ---
 
 `is_just_pressed(keycode: Keycode) → bool`
@@ -63,7 +61,7 @@ _**Returns**_
 
 `bool` : True if the key was just pressed, otherwise False.
 
-## Is Just Released (Scancode)
+## Is Just Released
 ---
 
 `is_just_released(scancode: Scancode) → bool`
@@ -78,7 +76,6 @@ _**Returns**_
 
 `bool` : True if the key was just released, otherwise False.
 
-## Is Just Released (Keycode)
 ---
 
 `is_just_released(keycode: Keycode) → bool`
