--- a/contents/docs/functions/time/index.mdx
+++ b/contents/docs/functions/time/index.mdx
@@ -2,7 +2,7 @@
 title: Time
 ---
 
-## get_elapsed
+## Get Elapsed
 ---
 
 `get_elapsed() → float`
@@ -13,7 +13,7 @@ _**Returns**_
 
 `float` : The total elapsed time since program start, in seconds.
 
-## delay
+## Delay
 ---
 
 `delay(milliseconds: int) → None`
