--- a/contents/docs/functions/window/index.mdx
+++ b/contents/docs/functions/window/index.mdx
@@ -6,54 +6,85 @@ description: Functions for creating and managing an application window.
 ## Create
 ---
 
-`create(title: str, size: Vec2, scaled: bool = False) → None`
+`create(title: str, resolution: Vec2, scaled: bool = False) → None`
+
+Create a new application window.
+
+_**Parameters**_
+
+- `title`: The title of the window.
+- `resolution`: The initial resolution of the window.
+- `scaled`: Whether the window should be automatically scaled up to fit into the display.
 
 ## Is Open
 ---
 
 `is_open() → bool`
 
+Check if the window is currently open.
+
+_**Returns**_
+
+- `bool`: True if the window is open, False otherwise.
+
 ## Close
 ---
 
 `close() → None`
 
+Close the application window.
+
 ## Get Size
 ---
 
-`get_size() → tuple[float, float]`
+`get_size() → Vec2`
+
+Get the current size of the window. If scaled, the size will be adjusted to fit the display.
+
+_**Returns**_
+
+- `Vec2`: The current size of the window.
 
 ## Set Fullscreen
 ---
 
 `set_fullscreen(fullscreen: bool) → None`
 
+Set the window to a fullscreen mode.
+
+_**Parameters**_
+
+- `fullscreen`: Whether to enable or disable fullscreen mode.
+
 ## Is Fullscreen
 ---
 
 `is_fullscreen() → bool`
+
+Check if the window is currently in fullscreen mode.
+
+_**Returns**_
+
+- `bool`: True if the window is in fullscreen mode, False otherwise.
 
 ## Set Title
 ---
 
 `set_title(title: str) → None`
 
+Set the title of the window.
+
+_**Parameters**_
+
+- `title`: The new title of the window.
+
 ## Get Title
 ---
 
 `get_title() → str`
 
-## Init
----
+Get the current title of the window.
 
-`init() → None`
+_**Returns**_
 
-## Quit
----
-
-`quit() → None`
-
-## Get Window _(internal)_
----
-
-`get_window() → SDL_Window*`
+- `str`: The current title of the window.
